--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -1,7 +1,7 @@
 <!-- begin post -->
 {% assign author = site.authors[post.author] %}
 <div class="col-md-6 mb-30px card-group">
-    <div class="listfeaturedtag h-100">
+    <div>
         <div class="row h-100">
             <div class="col-12 col-md-12 col-lg-4 pr-lg-0">
                 <div class="h-100">
