added conditional colon to event.

--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -20,7 +20,7 @@
             {% if post.event == true %}
             <h4 class="card-text">Event
                 {% if post.datetime %}
-                {{ post.datetime }}
+                : {{ post.datetime }}
                 {% endif %}
             </h4>
             {% endif %}
