added future dates to scripts and to default page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -187,6 +187,6 @@ ga('send', 'pageview');
 {% if page.layout == 'post' %}
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 {% endif %}
-
+<script id="future-dates" src="{{ site.baseurl }}/assets/js/futuredates.js"</script>
 </body>
 </html>
