--- a/_includes/eventbox.html
+++ b/_includes/eventbox.html
@@ -20,8 +20,14 @@
                 <div class="h-100 card-group">
                     <div class="card">
                         <div class="card-body">
-                            {% if post.datetime %}
-                            <h4 class="card-text">{{ post.datetime }}</h4>
+                            {% if post.eventdate %}
+                                <h4 class="card-text">{{ post.eentdate | date: "%B %e, %Y"}}.
+                                    {%if post.eventstartUTC %} {{ post.eventstart }}
+                                        {%if post.eventendUTC %}-{{ post.eventend }} UTC}}
+                                        {%endif%}
+                                    {%endif%}
+                            {%endif%}
+                            </h4>
                             {% endif %}
                             <h2 class="card-title">
                                 <a class="text-dark" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
