Added place time include to main post page.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,6 +60,11 @@ post_class: post-template
 
             {% endif %}
             <!-- End Featured Image -->
+                
+                <!-- add time-place if event -->
+                {% if post.event == "true" %}
+                    {% include placetime.html %}
+                {% endif %}
 
             <!-- Post Content -->
             <div class="article-post">
