adding debugging test

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,6 +63,7 @@ post_class: post-template
                 
                 <!-- add time-place if event -->
                 {% if post.event == "true" %}
+                    <!-- test 1 -->
                     {% include placetime.html %}
                 {% endif %}
 
