--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ post_class: post-template
             <!-- End Featured Image -->
                 
                 <!-- add time-place if event -->
-                {% if post.event == "true" %}
+                {% if page.event == "true" %}
                     <!-- test 1 -->
                     {% include placetime.html %}
                 {% endif %}
@@ -93,7 +93,7 @@ post_class: post-template
             <!-- Post Date -->
             <p>
             <small>
-                <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
+                <span class="post-date">Posted on: <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
                 {% if page.last_modified_at %}
                 (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
                 {% endif %}
