--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ post_class: post-template
             <!-- End Featured Image -->
                 
                 <!-- add time-place if event -->
-                {% if page.event == "true" %}
+                {% if post.event == "true" %}
                     <!-- test 1 -->
                     {% include placetime.html %}
                 {% endif %}
