--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,10 +62,10 @@ post_class: post-template
             <!-- End Featured Image -->
                 
                 <!-- add time-place if event -->
-                {% if page.event == true %}
+               <!-- {% if page.event == true %} -->
                     <!-- test 1 -->
                     {% include placetime.html %}
-                {% endif %}
+                <!-- {% endif %} -->
 
             <!-- Post Content -->
             <div class="article-post">
