--- a/_includes/eventbox.html
+++ b/_includes/eventbox.html
@@ -37,7 +37,7 @@
                                 {% endif %}
                             </h2>
 
-                            <h4 class="card-text">{{ post.pullquote | truncatewords:25 }}</h4>
+                            <h4 class="card-text">{% if post.pullquote %}{{ post.pullquote | truncatewords:30 }}{% else %}{{ post.excerpt | strip_html | truncatewords:25 }}{% endif %}</h4>
                         </div>
                         <div class="card-footer b-0 bg-white mt-auto">
                             <div class="wrapfooter">
