--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -36,7 +36,7 @@
                 </div>
                 {% endif %}
             </h2>
-            <h4 class="card-text">{{ post.pullquote | truncatewords:30 }}</h4>
+            <h4 class="card-text">{% if post.pullquote %}{{ post.pullquote | truncatewords:30 }}{% else %}{{ post.excerpt | strip_html | truncatewords:25 }}{% endif %}</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
