--- a/_includes/placetime.html
+++ b/_includes/placetime.html
@@ -2,22 +2,22 @@
 {% if post.event == "true" %}
     <div class="eventtime">
         {% if post.eventdate %}
-        <h4 class="card-text"><a href="https://www.timeanddate.com/worldclock/meetingdetails.html?year={{ post.eventdate | date:"%Y" }}&month={{ post.eventdate | date:"%m" }}&day={{ post.eventdate | date:"%d" }}&hour={{ post.eventstartUTC | date:"%H" }}&min=0&sec=0&p1=137&p2=75&p3=179&p4=136&p5=195&p6=53&p7=771&p8=196&p9=240&p10=264">{{ post.eventdate | date: "%B %e, %Y"}}.
-            {% if post.eventstartUTC %} {{ post.eventstartUTC }}
-            {% if post.eventendUTC %}-{{ post.eventendUTC }} UTC
+        <h4 class="card-text"><a href="https://www.timeanddate.com/worldclock/meetingdetails.html?year={{ post.eventdate | date:"%Y" }}&month={{ post.eventdate | date:"%m" }}&day={{ post.eventdate | date:"%d" }}&hour={{ post.eventstartUTC | date:"%H" }}&min=0&sec=0&p1=137&p2=75&p3=179&p4=136&p5=195&p6=53&p7=771&p8=196&p9=240&p10=264">{{ page.eventdate | date: "%B %e, %Y"}}.
+            {% if page.eventstartUTC %} {{ page.eventstartUTC }}
+            {% if page.eventendUTC %}-{{ page.eventendUTC }} UTC
             {% endif %}
             {% endif %}</a>
         </h4>
         {% endif %}
     </div>
     <div class="eventlocation">
-        {% if post.zoomlink %}
-        <h4 class="card-text"><a href="{{ post.zoomlink }}">Registration link</a>.</h4>
+        {% if page.zoomlink %}
+        <h4 class="card-text"><a href="{{ page.zoomlink }}">Registration link</a>.</h4>
         {% endif %}
     </div>
     <div class="eventlocation">
-        {% if post.ics %}
-        <h4 class="card-text"><a href="{{ post.ics }}">Calendar link (ics)</a>.</h4>
+        {% if page.ics %}
+        <h4 class="card-text"><a href="{{ page.ics }}">Calendar link (ics)</a>.</h4>
         {% endif %}
     </div>
 {% endif %}
