caught an extra post. to page.

--- a/_includes/placetime.html
+++ b/_includes/placetime.html
@@ -1,5 +1,5 @@
 <!-- begin date and location information -->
-{% if post.event == "true" %}
+{% if page.event == true %}
     <div class="eventtime">
         {% if post.eventdate %}
         <h4 class="card-text"><a href="https://www.timeanddate.com/worldclock/meetingdetails.html?year={{ post.eventdate | date:"%Y" }}&month={{ post.eventdate | date:"%m" }}&day={{ post.eventdate | date:"%d" }}&hour={{ post.eventstartUTC | date:"%H" }}&min=0&sec=0&p1=137&p2=75&p3=179&p4=136&p5=195&p6=53&p7=771&p8=196&p9=240&p10=264">{{ page.eventdate | date: "%B %e, %Y"}}.
