some improvements ot links.

--- a/_includes/placetime.html
+++ b/_includes/placetime.html
@@ -12,12 +12,12 @@
     </div>
     <div class="eventlocation">
         {% if page.zoomlink %}
-        <h4 class="card-text"><a href="{{ page.zoomlink }}">Registration link</a>.</h4>
+        <h4 class="card-text"><a href="{{ page.zoomlink }}">Registration</a>.</h4>
         {% endif %}
     </div>
     <div class="eventlocation">
         {% if page.ics %}
-        <h4 class="card-text"><a href="{{ page.ics }}">Calendar link (ics)</a>.</h4>
+        <h4 class="card-text"><a href="{{ page.ics }}">Add to calendar (download/subscribe)</a>.</h4>
         {% endif %}
     </div>
 {% endif %}
