--- a/_includes/placetime.html
+++ b/_includes/placetime.html
@@ -13,7 +13,7 @@
     </div>
     <div class="eventlocation">
         {% if page.zoomlink %}
-        <h4 class="card-text"><a href="{{ page.zoomlink }}">Registration</a>.</h4>
+        <h4 class="card-text"><a href="{{ page.zoomlink }}">Registration link</a>.</h4>
         {% endif %}
     </div>
     <div class="eventlocation">
