--- a/_includes/placetime.html
+++ b/_includes/placetime.html
@@ -13,12 +13,12 @@
     </div>
     <div class="eventlocation">
         {% if page.zoomlink %}
-        <h4 class="card-text"><a href="{{ page.zoomlink }}">Registration link</a>.</h4>
+        <h4 class="card-text"><a href="{{ page.zoomlink }}">Link to register</a></h4>
         {% endif %}
     </div>
     <div class="eventlocation">
         {% if page.ics %}
-        <h4 class="card-text"><a href="{{ page.ics }}">Add to calendar (download/subscribe)</a>.</h4>
+        <h4 class="card-text"><a href="{{ page.ics }}">Add to calendar (.ics download/subscribe)</a></h4>
         {% endif %}
     </div>
 </div>
