corrected DOI ref

--- a/_includes/placetime.html
+++ b/_includes/placetime.html
@@ -13,7 +13,7 @@
     </div>
     {% if page.DOI %}
     <div class="DOI">
-        DOI for recording/slides/etc. <a href="https://doi.org/{{ page.doi }}">{{ page.doi }}</a>
+        DOI for recording/slides/etc. <a href="https://doi.org/{{ page.DOI }}">{{ page.DOI }}</a>
         {% else %}
         {% if page.zoomlink %}
         <div class="eventlocation">
