--- a/_includes/placetime.html
+++ b/_includes/placetime.html
@@ -14,6 +14,7 @@
     {% if page.DOI %}
     <div class="DOI">
         DOI for recording/slides/etc. <a href="https://doi.org/{{ page.DOI }}">{{ page.DOI }}</a>
+        </div>
         {% else %}
         {% if page.zoomlink %}
         <div class="eventlocation">
