--- a/_includes/eventbox.html
+++ b/_includes/eventbox.html
@@ -31,7 +31,7 @@
                                 <h4 class="card-text">{{ post.eventdate | date: "%B %e, %Y"}}.
                                     {% if post.eventstartUTC %} {{ post.eventstartUTC }}
                                         {% if post.eventendUTC %}-{{ post.eventendUTC }}
-                                        {% endif %} UTC
+                                        {% endif %} UTC (<a href="https://www.timeanddate.com/worldclock/meetingdetails.html?year={{ page.eventdate | date:"%Y" }}&month={{ page.eventdate | date:"%m" }}&day={{ page.eventdate | date:"%d" }}&hour={{ page.eventstartUTC | truncate: 2, "" }}&min=0&sec=0&p1=137&p2=75&p3=179&p4=136&p5=195&p6=53&p7=771&p8=196&p9=240&p10=264">Find your time</a>)
                                     {% endif %}
                             </h4>
                             {% endif %}
